# noddle

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  EXPLANATION.md  README.md
crates/noddle-adapter-candle/: Cargo.toml
crates/noddle-adapter-candle/src/: gguf.rs  lib.rs  tensor_io.rs  tokenizer.rs  transformer.rs
crates/noddle-cli/: Cargo.toml
crates/noddle-cli/src/: main.rs  pull.rs
crates/noddle-core/: Cargo.toml
crates/noddle-core/src/: adapter.rs  adapter_registry.rs  backend.rs  backend_registry.rs  layer_split.rs  lib.rs  manifest.rs  tensor.rs
crates/noddle-node/: Cargo.toml
crates/noddle-node/src/: config.rs  config_watcher.rs  main.rs  role.rs  services.rs  session.rs  state.rs  tls.rs  weight_discovery.rs
crates/noddle-proto/: Cargo.toml  build.rs
crates/noddle-proto/src/: lib.rs
crates/noddle-registry/: Cargo.toml
crates/noddle-registry/src/: gossip.rs  lib.rs  registry.rs
crates/noddle-router/: Cargo.toml
crates/noddle-router/src/: lib.rs  router.rs  selector.rs
manifests/: HuggingFaceTB--SmolLM2-1.7B-Instruct.json  Qwen--Qwen2.5-7B-Instruct.json  Qwen--Qwen2.5-Coder-7B-Instruct.json  meta-llama--Llama-3.2-3B-Instruct.json  microsoft--Phi-3.5-mini-instruct.json  microsoft--phi-4.json
proto/: noddle.proto
