[workspace]
members = [
    "crates/noddle-proto",
    "crates/noddle-core",
    "crates/noddle-registry",
    "crates/noddle-router",
    "crates/noddle-adapter-candle",
    "crates/noddle-node",
    "crates/noddle-cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC / protobuf
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
rand = "0.8"
futures = "0.3"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }

# Internal crates
noddle-proto          = { path = "crates/noddle-proto" }
noddle-core           = { path = "crates/noddle-core" }
noddle-registry       = { path = "crates/noddle-registry" }
noddle-router         = { path = "crates/noddle-router" }
noddle-adapter-candle = { path = "crates/noddle-adapter-candle" }
