[package]
name = "noddle-adapter-candle"
version = "0.1.0"
edition = "2024"

[features]
cuda  = ["candle-core/cuda"]
metal = ["candle-core/metal"]

[dependencies]
noddle-core  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

# Candle ML framework
candle-core         = "0.8"
candle-nn           = "0.8"
candle-transformers = "0.8"

# Tokenizer (loaded from tokenizer.json alongside the weight file)
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Tensor serialization
safetensors = "0.3"
