[package]
name = "noddle-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noddle"
path = "src/main.rs"

[dependencies]
noddle-proto = { workspace = true }
tokio        = { workspace = true }
tonic        = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
