[package]
name = "noddle-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noddle"
path = "src/main.rs"

[dependencies]
noddle-proto       = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream       = { workspace = true }
uuid               = { workspace = true }
tower              = { workspace = true }
hyper-util         = { workspace = true }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
indicatif          = "0.17"
futures-util       = "0.3"
noddle-core        = { workspace = true }
serde_json         = { workspace = true }
