[package]
name = "noddle-core"
version = "0.1.0"
edition = "2024"

[dependencies]
noddle-proto = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
