[package]
name = "noddle-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noddle-node"
path = "src/main.rs"

[dependencies]
noddle-proto    = { workspace = true }
noddle-core     = { workspace = true }
noddle-registry = { workspace = true }
noddle-router   = { workspace = true }
tokio           = { workspace = true }
tonic           = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
uuid            = { workspace = true }
