[package]
name = "noddle-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noddle-node"
path = "src/main.rs"

[dependencies]
noddle-proto    = { workspace = true }
noddle-core     = { workspace = true }
noddle-registry = { workspace = true }
noddle-router   = { workspace = true }
tokio           = { workspace = true }
tonic           = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
uuid            = { workspace = true }
toml            = "0.8"
tokio-stream    = { workspace = true }
rcgen           = "0.13"
ring            = "0.17"
base64          = "0.22"
dashmap         = { workspace = true }
futures         = { workspace = true }
chrono          = { workspace = true }

[dev-dependencies]
tempfile = "3"
